[tool.poetry]
name = "lsnetex"
version = "0.1.0"
description = "A extension of LSNet network implementation"
authors = ["jefferson-norberto2 <jmn@cin.ufpe.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.*"
tensorboardx = "^2.6.2.2"
tensorboard = "^2.18.0"
opencv-python = "^4.10.0.84"
torch = [
  {url = "https://download.pytorch.org/whl/cu121/torch-2.2.1%2Bcu121-cp39-cp39-linux_x86_64.whl", markers = "sys_platform == 'linux'"}
]
torchaudio = [
    {url = "https://download.pytorch.org/whl/cu121/torchaudio-2.2.1%2Bcu121-cp39-cp39-linux_x86_64.whl", markers = "sys_platform == 'linux'"}
]
torchvision = [
    {url = "https://download.pytorch.org/whl/cu121/torchvision-0.17.1%2Bcu121-cp39-cp39-linux_x86_64.whl", markers = "sys_platform == 'linux'"}
]
wandb = "^0.19.0"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
